<resources>
    <string name="app_name">android2</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="home_main">首页</string>
    <string name="home_charts">统计</string>
    <string name="home_work">办公</string>
    <string name="home_message">消息</string>
    <string name="home_mine">我的</string>
</resources>