<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">



    <item
        android:id="@+id/navigation_home_main"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/home_main" />
    <item
        android:id="@+id/navigation_home_charts"
        android:icon="@drawable/ic_baseline_pie_chart_24"
        android:title="@string/home_charts" />
    <item
        android:id="@+id/navigation_home_work"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="@string/home_work" />
    <item
        android:id="@+id/navigation_home_message"
        android:icon="@drawable/ic_baseline_message_24"
        android:title="@string/home_message" />
    <item
        android:id="@+id/navigation_home_mine"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/home_mine" />
</menu>